text messages size now adjust to size of the message content

--- a/index.html
+++ b/index.html
@@ -182,28 +182,28 @@
 			<div class="modal-body">
 			  <div class="row">
 				<!-- Friends Column -->
-				<div class="col-3 border-end">
+				<div class="col-4 border-end">
 				  <h5 class="text-light">Friends</h5>
 				  <!-- List of friends (example) -->
 				</div>
 				<!-- Live Chat -->
-				<div class="col-9 d-flex flex-column">
+				<div class="col-8 d-flex flex-column">
 				  <!-- Messages Display -->
 				  <div class="flex-grow-1 overflow-auto" id="chat-messages" style="height: 500px;">
 					<!-- Example messages -->
 					<div class="p-2">
-					  <div class="text-dark p-2 rounded mb-2" style="background-color: orange; max-width: 70%">Hi!</div>
-					  <div class="text-light bg-secondary p-2 rounded ms-auto mb-2" style="max-width: 70%;">Hi there!</div>
-					  <div class="text-dark p-2 rounded mb-2" style="background-color: orange; max-width: 70%">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
-					  <div class="text-light bg-secondary p-2 rounded ms-auto mb-2" style="max-width: 70%;">Hi there!</div>
-					  <div class="text-dark p-2 rounded mb-2" style="background-color: orange; max-width: 70%">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
-					  <div class="text-light bg-secondary p-2 rounded ms-auto mb-2" style="max-width: 70%;">Hi there!</div>
-					  <div class="text-dark p-2 rounded mb-2" style="background-color: orange; max-width: 70%">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
-					  <div class="text-light bg-secondary p-2 rounded ms-auto mb-2" style="max-width: 70%;">Hi there!</div>
-					  <div class="text-dark p-2 rounded mb-2" style="background-color: orange; max-width: 70%">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
-					  <div class="text-light bg-secondary p-2 rounded ms-auto mb-2" style="max-width: 70%;">Hi there!</div>
-					  <div class="text-dark p-2 rounded mb-2" style="background-color: orange; max-width: 70%">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
-					  <div class="text-light bg-secondary p-2 rounded ms-auto mb-2" style="max-width: 70%;">Hi there!</div>
+					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Hi!</div>
+					  <div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi there!</div>
+					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
+					  <div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi theredadwadwa!</div>
+					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
+					  <div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi therfwafa da wfe!</div>
+					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
+					  <div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi the waw efa sfare!</div>
+					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
+					  <div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi theaaaaaaaaaaaaaaaaaaaaare!</div>
+					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
+					  <div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi ther  dsa wa           e!</div>
 					</div>
 				  </div>
 				  <!-- Message Input And Send Button -->
