--- a/index.html
+++ b/index.html
@@ -182,15 +182,83 @@
 			<div class="modal-body">
 			  <div class="row">
 				<!-- Friends Column -->
-				<div class="col-4 border-end">
+				<div class="col-4 d-flex flex-column border-end">
 				  <h5 class="text-light">Friends</h5>
 				  <!-- List of friends (example) -->
+				  <div class="flex-grow-1 overflow-auto" id="contacts" style="height: 500px;">
+					<!-- Example Contacts -->
+					<div class="p-2">
+						<div class="d-flex align-items-start align-items-center">
+							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i> <!-- Profile Picture -->
+							<div class="ms-3">
+								<h4 class="text-light mb-1">Person</h4> <!-- Contact Name -->
+								<p class="text-light mb-0">Last message sent/received</p> <!-- Last message -->
+							</div>
+						</div>
+						<div class="d-flex align-items-start align-items-center">
+							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+							<div class="ms-3">
+								<h4 class="text-light mb-1">Person</h4>
+								<p class="text-light mb-0">Last message sent/received</p>
+							</div>
+						</div>
+						<div class="d-flex align-items-start align-items-center">
+							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+							<div class="ms-3">
+								<h4 class="text-light mb-1">Person</h4>
+								<p class="text-light mb-0">Last message sent/received</p>
+							</div>
+						</div>
+						<div class="d-flex align-items-start align-items-center">
+							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+							<div class="ms-3">
+								<h4 class="text-light mb-1">Person</h4>
+								<p class="text-light mb-0">Last message sent/received</p>
+							</div>
+						</div>
+						<div class="d-flex align-items-start align-items-center">
+							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+							<div class="ms-3">
+								<h4 class="text-light mb-1">Person</h4>
+								<p class="text-light mb-0">Last message sent/received</p>
+							</div>
+						</div>
+						<div class="d-flex align-items-start align-items-center">
+							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+							<div class="ms-3">
+								<h4 class="text-light mb-1">Person</h4>
+								<p class="text-light mb-0">Last message sent/received</p>
+							</div>
+						</div>
+						<div class="d-flex align-items-start align-items-center">
+							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+							<div class="ms-3">
+								<h4 class="text-light mb-1">Person</h4>
+								<p class="text-light mb-0">Last message sent/received</p>
+							</div>
+						</div>
+						<div class="d-flex align-items-start align-items-center">
+							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+							<div class="ms-3">
+								<h4 class="text-light mb-1">Person</h4>
+								<p class="text-light mb-0">Last message sent/received</p>
+							</div>
+						</div>
+						<div class="d-flex align-items-start align-items-center">
+							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+							<div class="ms-3">
+								<h4 class="text-light mb-1">Person</h4>
+								<p class="text-light mb-0">Last message sent/received</p>
+							</div>
+						</div>
+					</div>
+				  </div>
 				</div>
 				<!-- Live Chat -->
 				<div class="col-8 d-flex flex-column">
 				  <!-- Messages Display -->
 				  <div class="flex-grow-1 overflow-auto" id="chat-messages" style="height: 500px;">
-					<!-- Example messages -->
+					<!-- Example Messages -->
 					<div class="p-2">
 					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Hi!</div>
 					  <div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi there!</div>
