added contact name to top of message box. message box also starts at bottom to show most recent message first

--- a/index.html
+++ b/index.html
@@ -256,8 +256,15 @@
 				</div>
 				<!-- Live Chat -->
 				<div class="col-8 d-flex flex-column">
-				  <!-- Messages Display -->
-				  <div class="flex-grow-1 overflow-auto" id="chat-messages" style="height: 500px;">
+					<!-- Contact Messages -->
+					<div class="d-flex align-items-start align-items-center border-bottom">
+						<i class="bi bi-person-square text-light h1"></i>
+						<div class="ms-3">
+							<h4 class="text-light mb-1">Person</h4>
+						</div>
+					</div>
+					<!-- Messages Display -->
+				  <div class="flex-grow-1 overflow-auto" id="chat-messages" style="height: 500px; flex-direction: column-reverse">
 					<!-- Example Messages -->
 					<div class="p-2">
 					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Hi!</div>
