--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 	
+	<!-- CSS Files -->
     <link rel="stylesheet" href="style.css">
 
-	<!-- JavaScript files -->
+	<!-- JavaScript Files -->
 	<script src="javascript/chat.js" defer></script>
 	<script src="javascript/login.js" defer></script>
 	<script src="javascript/player-stats.js" defer></script>
@@ -180,126 +181,126 @@
 	<!-- Chat Modal -->
 	<div id="chat-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-xl">
-		  <div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
-			<div class="modal-header">
-			  <h5 class="modal-title text-light" id="staticBackdropLabel">Chat</h5>
-			  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-			<div class="modal-body">
-			  <div class="row">
-				<!-- Friends Column -->
-				<div class="col-4 d-flex flex-column border-end">
-				  <h5 class="text-light">Friends</h5>
-				  <!-- List of friends (example) -->
-				  <div class="flex-grow-1 overflow-auto" id="contacts" style="height: 500px;">
-					<!-- Example Contacts -->
-					<div class="p-2">
-						<div class="d-flex align-items-start align-items-center">
-							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i> <!-- Profile Picture -->
-							<div class="ms-3">
-								<h4 class="text-light mb-1">Person</h4> <!-- Contact Name -->
-								<p class="text-light mb-0">Last message sent/received</p> <!-- Last message -->
-							</div>
-						</div>
-						<div class="d-flex align-items-start align-items-center">
-							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
-							<div class="ms-3">
-								<h4 class="text-light mb-1">Person</h4>
-								<p class="text-light mb-0">Last message sent/received</p>
-							</div>
-						</div>
-						<div class="d-flex align-items-start align-items-center">
-							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
-							<div class="ms-3">
-								<h4 class="text-light mb-1">Person</h4>
-								<p class="text-light mb-0">Last message sent/received</p>
-							</div>
-						</div>
-						<div class="d-flex align-items-start align-items-center">
-							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
-							<div class="ms-3">
-								<h4 class="text-light mb-1">Person</h4>
-								<p class="text-light mb-0">Last message sent/received</p>
-							</div>
-						</div>
-						<div class="d-flex align-items-start align-items-center">
-							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
-							<div class="ms-3">
-								<h4 class="text-light mb-1">Person</h4>
-								<p class="text-light mb-0">Last message sent/received</p>
-							</div>
-						</div>
-						<div class="d-flex align-items-start align-items-center">
-							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
-							<div class="ms-3">
-								<h4 class="text-light mb-1">Person</h4>
-								<p class="text-light mb-0">Last message sent/received</p>
-							</div>
-						</div>
-						<div class="d-flex align-items-start align-items-center">
-							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
-							<div class="ms-3">
-								<h4 class="text-light mb-1">Person</h4>
-								<p class="text-light mb-0">Last message sent/received</p>
-							</div>
-						</div>
-						<div class="d-flex align-items-start align-items-center">
-							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
-							<div class="ms-3">
-								<h4 class="text-light mb-1">Person</h4>
-								<p class="text-light mb-0">Last message sent/received</p>
-							</div>
-						</div>
-						<div class="d-flex align-items-start align-items-center">
-							<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
-							<div class="ms-3">
-								<h4 class="text-light mb-1">Person</h4>
-								<p class="text-light mb-0">Last message sent/received</p>
-							</div>
-						</div>
-					</div>
-				  </div>
+			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
+				<div class="modal-header">
+					<h5 class="modal-title text-light" id="staticBackdropLabel">Chat</h5>
+					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
-				<!-- Live Chat -->
-				<div class="col-8 d-flex flex-column">
-					<!-- Contact Messages -->
-					<div class="d-flex align-items-start align-items-center border-bottom">
-						<i class="bi bi-person-square text-light h1"></i>
-						<div class="ms-3">
-							<h4 class="text-light mb-1">Person</h4>
+				<div class="modal-body">
+					<div class="row">
+						<!-- Friends Column -->
+						<div class="col-4 d-flex flex-column border-end">
+							<h5 class="text-light">Friends</h5>
+							<!-- List of friends (example) -->
+							<div class="flex-grow-1 overflow-auto" id="contacts" style="height: 500px;">
+								<!-- Example Contacts -->
+								<div class="p-2">
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i> <!-- Profile Picture -->
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4> <!-- Contact Name -->
+											<p class="text-light mb-0">Last message sent/received</p> <!-- Last message -->
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- Live Chat -->
+						<div class="col-8 d-flex flex-column">
+							<!-- Contact Messages -->
+							<div class="d-flex align-items-start align-items-center border-bottom">
+								<i class="bi bi-person-square text-light h1"></i>
+								<div class="ms-3">
+									<h4 class="text-light mb-1">Person</h4>
+								</div>
+							</div>
+							<!-- Messages Display -->
+							<div class="flex-grow-1 overflow-auto" id="chat-messages" style="height: 500px; flex-direction: column-reverse">
+								<!-- Example Messages -->
+								<div class="p-2">
+								<div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Hi!</div>
+								<div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi there!</div>
+								<div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
+								<div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi theredadwadwa!</div>
+								<div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
+								<div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi therfwafa da wfe!</div>
+								<div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
+								<div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi the waw efa sfare!</div>
+								<div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
+								<div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi theaaaaaaaaaaaaaaaaaaaaare!</div>
+								<div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
+								<div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi ther  dsa wa           e!</div>
+								</div>
+							</div>
+							<!-- Message Input And Send Button -->
+							<div class="d-flex border-top align-items-center">
+								<textarea class="form-control me-2 h-50" placeholder="Type message..." name="msg" required></textarea>
+								<button class="btn text-light h-50">
+								<i class="bi bi-send"></i>
+								</button>
+							</div>
 						</div>
 					</div>
-					<!-- Messages Display -->
-				  <div class="flex-grow-1 overflow-auto" id="chat-messages" style="height: 500px; flex-direction: column-reverse">
-					<!-- Example Messages -->
-					<div class="p-2">
-					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Hi!</div>
-					  <div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi there!</div>
-					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
-					  <div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi theredadwadwa!</div>
-					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
-					  <div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi therfwafa da wfe!</div>
-					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
-					  <div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi the waw efa sfare!</div>
-					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
-					  <div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi theaaaaaaaaaaaaaaaaaaaaare!</div>
-					  <div class="text-dark p-2 rounded mb-2 px-3" style="background-color: orange; max-width: 70%; display: table;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin aliquet dignissim accumsan. Nam ullamcorper eget ipsum sed finibus. Ut feugiat libero eget leo porttitor, vitae gravida tellus tristique. Quisque ultricies augue vel venenatis efficitur. Sed eget auctor tellus, ac aliquam elit. Curabitur fermentum aliquam faucibus. Fusce eget sem sem. Aenean.</div>
-					  <div class="text-light bg-secondary p-2 rounded ms-auto text-end mb-2 px-3" style="max-width: 70%; display: table;">Hi ther  dsa wa           e!</div>
-					</div>
-				  </div>
-				  <!-- Message Input And Send Button -->
-				  <div class="d-flex border-top align-items-center">
-					<textarea class="form-control me-2 h-50" placeholder="Type message..." name="msg" required></textarea>
-					<button class="btn text-light h-50">
-					  <i class="bi bi-send"></i>
-					</button>
-				  </div>
 				</div>
-			  </div>
-			</div>
-		  </div>
+		  	</div>
 		</div>
-	  </div>
+	</div>
 	  
 
 	<!-- Match History Modal -->
