--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<script src="javascript/login.js" defer></script>
 	<script src="javascript/player-stats.js" defer></script>
 	<script src="javascript/register.js" defer></script>
-
+	<script src="javascript/setting.js" defer></script>
 
 	<!-- Icons -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -353,30 +353,35 @@
 				</div>
 				<div class="modal-body">
 					<!-- Change Username -->
-					<div class="d-flex">
-						<p class="text-light">Change username</p>
-						<input type="password" placeholder="New Password">
-						<div class="text-center">
+					<div class="d-flex align-items-center mb-3">
+						<p class="text-light pe-3 mb-0">Change Username</p>
+						<input type="text" class="form-control w-auto" placeholder="New Username">
+						<div class="text-center ps-3">
 							<button type="submit" class="btn btn-sm bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Change</button>
 						</div>
-					</div>
+					</div>					
 					<!-- Change Password -->
-					<div class="d-flex">
-						<p class="text-light">Change password</p>
-						<input type="password" placeholder="New Password">
-						<div class="text-center">
+					<div class="d-flex align-items-center mb-3">
+						<p class="text-light pe-3 mb-0">Change Password</p>
+						<input type="text" class="form-control w-auto" placeholder="New Password">
+						<div class="text-center ps-3">
 							<button type="submit" class="btn btn-sm bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Change</button>
 						</div>
-					</div>
+					</div>		
 					<!-- Change Avatar -->
-					<div class="d-flex">
-						<label for="img" class="text-light">Select image:</label>
-						<input class="text-light" type="file" id="img" name="img" accept="image/*">
-						<input type="submit">
+					<div class="d-flex align-items-center mb-3">
+						<label for="avatarImg" class="text-light pe-3 mb-0">Change Avatar:</label>
+						<div class="position-relative">
+							<input type="file" class="file-input" id="avatarImg" name="avatarImg" accept="image/*" style="display:none;">
+							<button type="button" class="btn btn-light btn-sm bg-gradient" onclick="document.getElementById('avatarImg').click();">Choose file</button>
+						</div>
+						<div class="text-center ps-3">
+							<button type="submit" class="btn btn-sm bg-gradient btn-block" style="background-color: rgb(238, 130, 238);">Change</button>
+						</div>
 					</div>
 					<!-- Toggle 2FA -->
-					<div class="d-flex">
-						<p class="text-light">Activate 2 Factor Authentication</p>
+					<div class="d-flex ">
+						<p class="text-light pe-3">Activate 2 Factor Authentication</p>
 						<input type="checkbox" class="form-check-input">
 					</div>
 				</div>
