changed size of settings modal

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 
 	<!-- Settings Modal -->
 	<div id="settings-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-		<div class="modal-dialog modal-dialog-centered modal-xl">
+		<div class="modal-dialog modal-dialog-centered modal-lg">
 			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Settings</h5>
