change avatar button on register now promts to select foto from device

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 									<!-- Current Avatar -->
 									<i class="bi bi-person-square text-light register-icon"></i>
 									<div class="text-center">
-										<button class="btn btn-sm bg-gradient btn-block" style="background-color: rgb(238, 130, 238)">Change Avatar</button>
+										<input type="file" class="file-input" id="avatarImg" name="avatarImg" accept="image/*" style="display:none;">
+										<button type="button" class="btn bg-gradient" style="background-color: rgb(238, 130, 238)" onclick="document.getElementById('avatarImg').click();">Upload Avatar</button>
 									</div>
 								</div>
 								<!-- Register Components -->
