--- a/index.html
+++ b/index.html
@@ -157,28 +157,31 @@
 					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
 				</div>
 				<div class="modal-body">
-					<div class="row">
+					<div class="row align-items-center">
 						<!-- User Identification -->
-						<div class="col-6">
-							<i class="bi bi-person-square h1 text-light"></i> <!-- User Profile Picture -->
-							<p class="text-light">(PLAYER_USERNAME)</p> <!-- User Username -->
-						</div>
-						<!-- User Game Stats -->
-						<div class="col-6">
+						<div class="col-4 text-center">
+							<div class="row pb-4">
+								<i class="bi bi-person-square h1 text-light"></i> <!-- User Profile Picture -->
+								<p class="text-light">(PLAYER_USERNAME)</p> <!-- User Username -->
+							</div>
 							<p class="text-light">Games Played: <span id="gamesPlayed"></span></p>
 							<p class="text-light">Wins: <span id="wins"></span></p>
 							<p class="text-light">Losses: <span id="losses"></span></p>
 							<p class="text-light">Tournaments Won: <span id="tournamentWins"></span></p>
 						</div>
-					</div>
-					<div class="text-center">
-						<!-- Points Graph -->
-						<canvas id="statsChart" width="700" height="400"></canvas>
+						<!-- User Game Stats -->
+						<div class="col-8">
+							<div class="text-center">
+								<!-- Points Graph -->
+								<canvas id="statsChart" width="700" height="400"></canvas>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	
 
 	<!-- Chat Modal -->
 	<div id="chat-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
