fixed conflicting ids

--- a/index.html
+++ b/index.html
@@ -357,10 +357,10 @@
 					</div>		
 					<!-- Change Avatar -->
 					<div class="d-flex align-items-center mb-3">
-						<label for="avatarImg" class="text-light pe-3 mb-0">Change Avatar:</label>
+						<label for="settingAvatar" class="text-light pe-3 mb-0">Change Avatar:</label>
 						<div class="position-relative">
-							<input type="file" class="file-input" id="avatarImg" name="avatarImg" accept="image/*" style="display:none;">
-							<button type="button" class="btn btn-light btn-sm bg-gradient" onclick="document.getElementById('avatarImg').click();">Choose file</button>
+							<input type="file" class="file-input" id="settingAvatar" name="settingAvatar" accept="image/*" style="display:none;">
+							<button type="button" class="btn btn-light btn-sm bg-gradient" onclick="document.getElementById('settingAvatar').click();">Choose file</button>
 						</div>
 						<div class="text-center ps-3">
 							<button type="submit" class="btn btn-sm bg-gradient btn-block" style="background-color: rgb(238, 130, 238);">Change</button>
