added dropdown menu to each user on chat with some options like block and invite

--- a/index.html
+++ b/index.html
@@ -181,7 +181,6 @@
 			</div>
 		</div>
 	</div>
-	
 
 	<!-- Chat Modal -->
 	<div id="chat-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -200,18 +199,29 @@
 							<div class="flex-grow-1 overflow-auto" id="contacts" style="height: 500px;">
 								<!-- Example Contacts -->
 								<div class="p-2">
+									<!-- First Contact -->
 									<div class="d-flex align-items-start align-items-center">
 										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i> <!-- Profile Picture -->
 										<div class="ms-3">
 											<h4 class="text-light mb-1">Person</h4> <!-- Contact Name -->
 											<p class="text-light mb-0">Last message sent/received</p> <!-- Last message -->
 										</div>
-									</div>
-									<div class="d-flex align-items-start align-items-center">
-										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
-										<div class="ms-3">
-											<h4 class="text-light mb-1">Person</h4>
-											<p class="text-light mb-0">Last message sent/received</p>
+										<div class="dropdown ms-auto">
+											<button class="btn dropdown-toggle align-items-end" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+												<i class="bi bi-three-dots-vertical h4 text-light"></i>
+											</button>
+											<!-- Dropdown Menu -->
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+												<!-- Menu Options -->
+												<li><a class="dropdown-item" href="#" data-value="Block">Block</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Invite To Play">Invite To Play</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Profile">Profile</a></li>
+											</ul>
+											<select class="custom-select" id="hiddenSelect">
+												<option value="Block">Block</option>
+												<option value="Invite To Play">Invite To Play</option>
+												<option value="Profile">Profile</option>
+											</select>
 										</div>
 									</div>
 									<div class="d-flex align-items-start align-items-center">
@@ -220,12 +230,20 @@
 											<h4 class="text-light mb-1">Person</h4>
 											<p class="text-light mb-0">Last message sent/received</p>
 										</div>
-									</div>
-									<div class="d-flex align-items-start align-items-center">
-										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
-										<div class="ms-3">
-											<h4 class="text-light mb-1">Person</h4>
-											<p class="text-light mb-0">Last message sent/received</p>
+										<div class="dropdown ms-auto">
+											<button class="btn dropdown-toggle align-items-end" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+												<i class="bi bi-three-dots-vertical h4 text-light"></i>
+											</button>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+												<li><a class="dropdown-item" href="#" data-value="Block">Block</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Invite To Play">Invite To Play</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Profile">Profile</a></li>
+											</ul>
+											<select class="custom-select" id="hiddenSelect">
+												<option value="Block">Block</option>
+												<option value="Invite To Play">Invite To Play</option>
+												<option value="Profile">Profile</option>
+											</select>
 										</div>
 									</div>
 									<div class="d-flex align-items-start align-items-center">
@@ -234,12 +252,20 @@
 											<h4 class="text-light mb-1">Person</h4>
 											<p class="text-light mb-0">Last message sent/received</p>
 										</div>
-									</div>
-									<div class="d-flex align-items-start align-items-center">
-										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
-										<div class="ms-3">
-											<h4 class="text-light mb-1">Person</h4>
-											<p class="text-light mb-0">Last message sent/received</p>
+										<div class="dropdown ms-auto">
+											<button class="btn dropdown-toggle align-items-end" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+												<i class="bi bi-three-dots-vertical h4 text-light"></i>
+											</button>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+												<li><a class="dropdown-item" href="#" data-value="Block">Block</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Invite To Play">Invite To Play</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Profile">Profile</a></li>
+											</ul>
+											<select class="custom-select" id="hiddenSelect">
+												<option value="Block">Block</option>
+												<option value="Invite To Play">Invite To Play</option>
+												<option value="Profile">Profile</option>
+											</select>
 										</div>
 									</div>
 									<div class="d-flex align-items-start align-items-center">
@@ -248,12 +274,20 @@
 											<h4 class="text-light mb-1">Person</h4>
 											<p class="text-light mb-0">Last message sent/received</p>
 										</div>
-									</div>
-									<div class="d-flex align-items-start align-items-center">
-										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
-										<div class="ms-3">
-											<h4 class="text-light mb-1">Person</h4>
-											<p class="text-light mb-0">Last message sent/received</p>
+										<div class="dropdown ms-auto">
+											<button class="btn dropdown-toggle align-items-end" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+												<i class="bi bi-three-dots-vertical h4 text-light"></i>
+											</button>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+												<li><a class="dropdown-item" href="#" data-value="Block">Block</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Invite To Play">Invite To Play</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Profile">Profile</a></li>
+											</ul>
+											<select class="custom-select" id="hiddenSelect">
+												<option value="Block">Block</option>
+												<option value="Invite To Play">Invite To Play</option>
+												<option value="Profile">Profile</option>
+											</select>
 										</div>
 									</div>
 									<div class="d-flex align-items-start align-items-center">
@@ -261,6 +295,153 @@
 										<div class="ms-3">
 											<h4 class="text-light mb-1">Person</h4>
 											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+										<div class="dropdown ms-auto">
+											<button class="btn dropdown-toggle align-items-end" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+												<i class="bi bi-three-dots-vertical h4 text-light"></i>
+											</button>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+												<li><a class="dropdown-item" href="#" data-value="Block">Block</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Invite To Play">Invite To Play</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Profile">Profile</a></li>
+											</ul>
+											<select class="custom-select" id="hiddenSelect">
+												<option value="Block">Block</option>
+												<option value="Invite To Play">Invite To Play</option>
+												<option value="Profile">Profile</option>
+											</select>
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+										<div class="dropdown ms-auto">
+											<button class="btn dropdown-toggle align-items-end" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+												<i class="bi bi-three-dots-vertical h4 text-light"></i>
+											</button>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+												<li><a class="dropdown-item" href="#" data-value="Block">Block</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Invite To Play">Invite To Play</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Profile">Profile</a></li>
+											</ul>
+											<select class="custom-select" id="hiddenSelect">
+												<option value="Block">Block</option>
+												<option value="Invite To Play">Invite To Play</option>
+												<option value="Profile">Profile</option>
+											</select>
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+										<div class="dropdown ms-auto">
+											<button class="btn dropdown-toggle align-items-end" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+												<i class="bi bi-three-dots-vertical h4 text-light"></i>
+											</button>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+												<li><a class="dropdown-item" href="#" data-value="Block">Block</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Invite To Play">Invite To Play</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Profile">Profile</a></li>
+											</ul>
+											<select class="custom-select" id="hiddenSelect">
+												<option value="Block">Block</option>
+												<option value="Invite To Play">Invite To Play</option>
+												<option value="Profile">Profile</option>
+											</select>
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+										<div class="dropdown ms-auto">
+											<button class="btn dropdown-toggle align-items-end" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+												<i class="bi bi-three-dots-vertical h4 text-light"></i>
+											</button>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+												<li><a class="dropdown-item" href="#" data-value="Block">Block</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Invite To Play">Invite To Play</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Profile">Profile</a></li>
+											</ul>
+											<select class="custom-select" id="hiddenSelect">
+												<option value="Block">Block</option>
+												<option value="Invite To Play">Invite To Play</option>
+												<option value="Profile">Profile</option>
+											</select>
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+										<div class="dropdown ms-auto">
+											<button class="btn dropdown-toggle align-items-end" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+												<i class="bi bi-three-dots-vertical h4 text-light"></i>
+											</button>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+												<li><a class="dropdown-item" href="#" data-value="Block">Block</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Invite To Play">Invite To Play</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Profile">Profile</a></li>
+											</ul>
+											<select class="custom-select" id="hiddenSelect">
+												<option value="Block">Block</option>
+												<option value="Invite To Play">Invite To Play</option>
+												<option value="Profile">Profile</option>
+											</select>
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+										<div class="dropdown ms-auto">
+											<button class="btn dropdown-toggle align-items-end" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+												<i class="bi bi-three-dots-vertical h4 text-light"></i>
+											</button>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+												<li><a class="dropdown-item" href="#" data-value="Block">Block</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Invite To Play">Invite To Play</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Profile">Profile</a></li>
+											</ul>
+											<select class="custom-select" id="hiddenSelect">
+												<option value="Block">Block</option>
+												<option value="Invite To Play">Invite To Play</option>
+												<option value="Profile">Profile</option>
+											</select>
+										</div>
+									</div>
+									<div class="d-flex align-items-start align-items-center">
+										<i class="bi bi-person-square text-light" style="font-size: 55px;"></i>
+										<div class="ms-3">
+											<h4 class="text-light mb-1">Person</h4>
+											<p class="text-light mb-0">Last message sent/received</p>
+										</div>
+										<div class="dropdown ms-auto">
+											<button class="btn dropdown-toggle align-items-end" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+												<i class="bi bi-three-dots-vertical h4 text-light"></i>
+											</button>
+											<ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+												<li><a class="dropdown-item" href="#" data-value="Block">Block</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Invite To Play">Invite To Play</a></li>
+												<li><a class="dropdown-item" href="#" data-value="Profile">Profile</a></li>
+											</ul>
+											<select class="custom-select" id="hiddenSelect">
+												<option value="Block">Block</option>
+												<option value="Invite To Play">Invite To Play</option>
+												<option value="Profile">Profile</option>
+											</select>
 										</div>
 									</div>
 								</div>
