--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<script src="javascript/settings.js" defer></script>
 	<script src="javascript/match-history.js" defer></script>
 	<script src="javascript/pong.js" defer></script>
+	<script src="javascript/game-ui.js" defer></script>
 	<script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
 
 	<!-- Icons -->
@@ -51,19 +52,31 @@
 			</nav>
 			
 			<!-- Game Content -->
-			<main class="col d-flex align-items-center justify-content-center" style="height: 100vh;">
+			<main class="col d-flex align-items-center justify-content-center">
 				<div class="game-menu text-center">
 					<h1 class="text-light mb-5">Start game</h1>
 					<h5 class="text-light mb-3">Select Game Mode</h5>
+					<!-- Select Game Mode Panel -->
 					<div class="text-center">
 						<!-- vs AI Mode -->
-						<button type="button" class="btn bg-gradient btn-block mb-2" style="background-color: rgb(238, 130, 238)">vs AI</button>
+						<button id="aiModeBtn" type="button" class="btn bg-gradient btn-block mb-2" style="background-color: rgb(238, 130, 238)">vs AI</button>
 						<!-- Local Multyplayer -->
-						<button type="button" class="btn bg-gradient btn-block mb-2" style="background-color: rgb(238, 130, 238)">Local vs</button>
+						<button id="localModeBtn" type="button" class="btn bg-gradient btn-block mb-2" style="background-color: rgb(238, 130, 238)">Local vs</button>
 						<!-- Remote Multiplayer -->
-						<button type="button" class="btn bg-gradient btn-block mb-2" style="background-color: rgb(238, 130, 238)">Remote vs</button>
+						<button id="remoteModeBtn" type="button" class="btn bg-gradient btn-block mb-2" style="background-color: rgb(238, 130, 238)">Remote vs</button>
 						<!-- Tournaments Mode -->
-						<button type="button" class="btn bg-gradient btn-block mb-2" style="background-color: rgb(238, 130, 238)">Tournaments</button>
+						<button id="tournamentModeBtn" type="button" class="btn bg-gradient btn-block mb-2" style="background-color: rgb(238, 130, 238)">Tournaments</button>
+						<!-- Tounament Display Name Selection Panel -->
+						<form id="tournamentDisplayName" class="d-none">
+							<div class="my-4">
+								<input type="text" class="form-control" placeholder="Tournament Display Name" required>
+							</div>
+						</form>
+						<!-- Join And Create Game Button -->
+						<div class="my-3">
+							<button id="joinGameBtn" type="button" class="btn bg-gradient btn-block mb-2 d-none" style="background-color: rgb(238, 130, 238)">Join Game</button>
+							<button id="createGameBtn" type="button" class="btn bg-gradient btn-block mb-2 d-none" style="background-color: rgb(238, 130, 238)">Create Game</button>
+						</div>
 					</div>
 				</div>
 				
@@ -73,8 +86,6 @@
 				</div> -->
 			</main>
 		</div>
-	</div>
-	
 	</div>
 	
 
