--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	<!-- Login Modal -->
 	<div id="login-modal" class="modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
-			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
+			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Login</h5>
 				</div>
@@ -111,7 +111,7 @@
 	<!-- Register Modal -->
 	<div id="register-modal" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg">
-			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
+			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Register</h5>
 					<button type="button" class="btn-close btn-close-white" data-bs-toggle="modal" data-bs-target="#login-modal"></button>
@@ -166,7 +166,7 @@
 	<!-- Player Stats Modal -->
 	<div id="stats-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-xl">
-			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
+			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Player Stats</h5>
 					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -200,7 +200,7 @@
 	<!-- Chat Modal -->
 	<div id="chat-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-xl">
-			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
+			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Chat</h5>
 					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -507,7 +507,7 @@
 	<!-- Match History Modal -->
 	<div class="modal fade" id="match-history-modal" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg">
-			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
+			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Match History</h5>
 					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -529,7 +529,7 @@
 	<!-- Settings Modal -->
 	<div id="settings-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg">
-			<div class="modal-content bg-gradient" style="background-color: rgba(130, 0, 130, .5);">
+			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Settings</h5>
 					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
