--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<!-- Tounament Display Name Selection Panel -->
 						<form id="tournamentDisplayName" class="d-none">
 							<div class="my-4">
-								<input type="text" class="form-control" placeholder="Tournament Display Name" required>
+								<input type="text" class="form-control text-center" placeholder="Tournament Display Name" required>
 							</div>
 						</form>
 						<!-- Join And Create Game Button -->
