--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<!-- Login Modal -->
 	<div id="login-modal" class="modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered">
-			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
+			<div class="modal-content" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Login</h5>
 				</div>
@@ -130,7 +130,7 @@
 	<!-- Register Modal -->
 	<div id="register-modal" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg">
-			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
+			<div class="modal-content" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Register</h5>
 					<button type="button" class="btn-close btn-close-white" data-bs-toggle="modal" data-bs-target="#login-modal"></button>
@@ -185,7 +185,7 @@
 	<!-- Player Stats Modal -->
 	<div id="stats-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-xl">
-			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
+			<div class="modal-content" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Player Stats</h5>
 					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -219,7 +219,7 @@
 	<!-- Chat Modal -->
 	<div id="chat-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-xl">
-			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
+			<div class="modal-content" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Chat</h5>
 					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -233,7 +233,7 @@
 							<div class="flex-grow-1 overflow-auto" id="contacts" style="height: 500px;">
 								<!-- Example Contacts -->
 								<div class="p-2">
-									<!-- Contact List -->
+									<!-- Contact Lis -->
 									<div id="chatContacts"></div>
 								</div>
 							</div>
@@ -283,7 +283,7 @@
 	<!-- Match History Modal -->
 	<div class="modal fade" id="match-history-modal" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg">
-			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
+			<div class="modal-content" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Match History</h5>
 					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -305,7 +305,7 @@
 	<!-- Settings Modal -->
 	<div id="settings-modal" class="modal fade" data-bs-backdrop="modal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
 		<div class="modal-dialog modal-dialog-centered modal-lg">
-			<div class="modal-content bg-gradient" style="background-color: rgb(80, 0, 80);">
+			<div class="modal-content" style="background-color: rgb(80, 0, 80);">
 				<div class="modal-header">
 					<h5 class="modal-title text-light" id="staticBackdropLabel">Settings</h5>
 					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
