--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 							</div>
 							<!-- Messages Display -->
 							<div class="flex-grow-1 overflow-auto" id="chat-messages" style="height: 500px; flex-direction: column-reverse">
-								<!-- Example Messages -->
+								<!-- Contact Chat Messages -->
 							</div>
 							<!-- Message Input And Send Button -->
 							<div class="d-flex border-top align-items-center">
