name of the contact is now shown at the top of the chat

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 							<div class="d-flex align-items-start align-items-center border-bottom">
 								<i class="bi bi-person-square text-light h1"></i>
 								<div class="ms-3">
-									<h4 class="text-light mb-1">Person</h4>
+									<h4 id="selectedContactName" class="text-light mb-1"></h4>
 								</div>
 							</div>
 							<!-- Messages Display -->
