--- a/index.html
+++ b/index.html
@@ -250,11 +250,11 @@
 							<!-- Messages Display -->
 							<div class="flex-grow-1 overflow-auto d-flex flex-column" id="chat-messages" style="height: 500px;">
 								<!-- Contact Chat Messages -->
-							</div>
+							</div>	
 							<!-- Message Input And Send Button -->
 							<div class="d-flex border-top align-items-center">
-								<textarea class="form-control me-2 h-50" placeholder="Type message..." name="msg" required></textarea>
-								<button class="btn text-light h-50">
+								<textarea id="messageTextArea" class="form-control me-2 h-50" placeholder="Type message..." name="msg" required></textarea>
+								<button id="sendMessagesBtn" class="btn text-light h-50">
 									<i class="bi bi-send"></i>
 								</button>
 							</div>
