--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 									<i class="bi bi-person-square text-light register-icon"></i>
 									<div class="text-center">
 										<input type="file" class="file-input" id="avatarImg" name="avatarImg" accept="image/*" style="display:none;">
-										<button type="button" class="btn bg-gradient" style="background-color: rgb(238, 130, 238)" onclick="document.getElementById('avatarImg').click();">Upload Avatar</button>
+										<button id="registerAvatarBtn" type="button" class="btn bg-gradient" style="background-color: rgb(238, 130, 238)" onclick="document.getElementById('avatarImg').click();">Upload Avatar</button>
 									</div>
 								</div>
 								<!-- Register Components -->
