--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
 								<div class="ms-3">
 									<h4 id="selectedContactName" class="text-light mb-1"></h4>
 								</div>
+								<div id="chatDropdownMenu" class="dropdown ms-auto"></div>
 							</div>	
 							<!-- Messages Display -->
 							<div class="flex-grow-1 overflow-auto d-flex flex-column" id="chat-messages" style="height: 500px;">
